[DTRA] Henry/feq 758/barrier alignment issue contract details (#1483)
* fix: put z index and alignment issue of blue barrier label in contract details

* fix: fix padding to get rid of alignment issue

* fix: change position of overlay and drag price not to block largest numbers of spot price

--- a/sass/components/_barrier.scss
+++ b/sass/components/_barrier.scss
@@ -8,6 +8,7 @@
     top: 0;
     user-select: none;
     width: 100%;
+    z-index: 1;
 }
 /* Drag Lines and Prices */
 .chart-line {
@@ -159,7 +160,7 @@
         background-color: $color-blue;
         height: 24px;
         opacity: 0.3;
-        position: relative;
+        position: absolute;
         right: -10px;
         top: -12px;
     }
