--- a/sass/styles/chart.scss
+++ b/sass/styles/chart.scss
@@ -1103,6 +1103,9 @@ $spot-color: #0298d3;
             }
         }
     }
+    .ciq-chart {
+        padding: 0 8px;
+    }
 }
 
 // To hide google translate tooltips on drag
